# obsidian-launcher

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  config.example.toml  obsidian-hotkey-daemon.service  release.sh  setup-daemon.sh
.github/workflows/: release.yml
AppDir/: .DirIcon  AppRun
AppDir/usr/share/applications/: obsidian-launcher.desktop
AppDir/usr/share/metainfo/: obsidian-launcher.metainfo.xml
src/: config.rs  hotkey_daemon.rs  index.rs  layer_shell.rs  lib.rs  main.rs  vault.rs  watcher.rs
